cabal-version:      3.4
name:               mazes
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-ambiguous-fields

executable mazes
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Graph,
      Maze,
      Random,
    build-depends:
      array,
      base,
      containers,
      diagrams,
      diagrams-lib,
      diagrams-svg,
      lens,
      mtl,
      MonadRandom,
      text,
      vector,
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
      DuplicateRecordFields,
      NoFieldSelectors,
      OverloadedRecordDot,
      OverloadedStrings,
      TypeFamilies,

