cabal-version:      3.4
name:               mazes
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-ambiguous-fields

executable mazes
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Graph,
      Maze,
      ProgramOptions,
      Random,
      Render,
    build-depends:
      array,
      base,
      bytestring,
      containers,
      diagrams,
      diagrams-core,
      diagrams-lib,
      diagrams-rasterific,
      diagrams-svg,
      JuicyPixels,
      lens,
      mtl,
      MonadRandom,
      optparse-applicative,
      svg-builder,
      text,
      vector,
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
      DuplicateRecordFields,
      NoFieldSelectors,
      OverloadedRecordDot,
      OverloadedStrings,
      TypeFamilies,

