cabal-version:      3.4
name:               mazes
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-ambiguous-fields

common runtime
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N

executable mazes
    import:           warnings, runtime
    main-is:          Main.hs
    other-modules:
      Graph,
      Maze,
      ProgramOptions,
      Random,
      Raster,
      Render,
    build-depends:
      array,
      async,
      base,
      bytestring,
      containers,
      diagrams,
      diagrams-core,
      diagrams-lib,
      diagrams-rasterific,
      diagrams-svg,
      JuicyPixels,
      lens,
      mtl,
      MonadRandom,
      optparse-applicative,
      svg-builder,
      text,
      vector,
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
      DuplicateRecordFields,
      LambdaCase,
      NoFieldSelectors,
      OverloadedRecordDot,
      OverloadedStrings,
      TypeFamilies,

